# note-msp430

./: .ccsproject  .cproject  .project  CMakeLists.txt  CONTRIBUTING.md  README.md  example.c  example_min.c  generic-msp430-gcc.cmake  main.c  main.h  product.h
.github/actions/build-examples/: Dockerfile  action.yml
.github/workflows/: ci.yml
.launches/: note-msp430.launch
Debug/: ccsObjs.opt  example.d  main.d  makefile  note-msp430.map  note-msp430.out  note-msp430.txt  note-msp430_linkInfo.xml  sources.mk  subdir_rules.mk  subdir_vars.mk
Debug/driverlib/MSP430FR2xx_4xx/: adc.d  crc.d  cs.d  ecomp.d  eusci_a_spi.d  eusci_a_uart.d  eusci_b_i2c.d  eusci_b_spi.d  framctl.d  gpio.d  icc.d  lcd_e.d  mpy32.d  pmm.d  rtc.d  sac.d  sfr.d  subdir_rules.mk  sysctl.d  tia.d  timer_a.d  timer_b.d  tlv.d  wdt_a.d
Debug/note-c/: n_atof.d  n_b64.d  n_cjson.d  n_cjson_helpers.d  n_ftoa.d  n_helpers.d  n_hooks.d  n_i2c.d  n_request.d  n_serial.d  n_str.d  subdir_rules.mk  subdir_vars.mk
driverlib/MSP430FR2xx_4xx/inc/: hw_memmap.h
note-c/: note-c-sources.txt  note-c.cmake
